Implement Audit-Assisted Profiler for io_uring
Introduce `IterativeProfiler` to dynamically discover and whitelist
filesystem access requirements via deny-and-retry logic. Add
`applyProfilingRuleset` to Landlock, enabling `AUDIT_LANDLOCK_ACCESS`
support for hardened profiling. Update Docker configuration to provide
necessary audit capabilities.

Signed-off-by: Leanid Piliptsevich <pilleo19@gmail.com>