@@ -1,6 +1,8 @@
 package io.contained
 
+import java.io.DataInputStream
 import java.io.File
+import java.io.InputStream
 import java.lang.foreign.Arena
 import java.lang.foreign.MemoryLayout
 import java.lang.foreign.MemorySegment
@@ -16,7 +18,12 @@ import java.util.logging.Logger
  */
 object Profiler {
     private val logger = Logger.getLogger(Profiler::class.java.name)
-    val recentLogs = java.util.concurrent.CopyOnWriteArrayList<String>()
+    private val pathCache = java.util.concurrent.ConcurrentHashMap<String, Long>()
+
+    /**
+     * Captured syscall trace events.
+     */
+    val recentLogs = java.util.concurrent.CopyOnWriteArrayList<TraceEvent>()
 
     /**
      * Compiles the currently profiled logs into a live Policy object.
@@ -33,26 +40,33 @@ object Profiler {
     }
 
     /**
-     * Clears all accumulated profiling logs.
+     * Clears all accumulated profiling logs and path caches.
      */
     fun clear() {
         recentLogs.clear()
+        pathCache.clear()
     }
 
     fun wrap(delegate: ExecutorService, vararg policies: Policy): ExecutorService {
         val policy = Policy.combine(*policies)
-        
+
         // Setup socket path
-        val tempDir = File(System.getProperty("user.dir"), "build/tmp")
+        val tempDir = File("build/tmp")
         tempDir.mkdirs()
         val socketFile = File.createTempFile("jseccomp-profiler-", ".sock", tempDir)
         socketFile.delete() // delete so bind can create it
         val socketPath = socketFile.absolutePath
 
         // Spawn Daemon
-        val javaBin = ProcessHandle.current().info().command().orElse("java")
+        val javaBin = System.getProperty("java.home") + "/bin/java"
         val classpath = System.getProperty("java.class.path")
-        val pb = ProcessBuilder(javaBin, "-cp", classpath, "io.contained.ProfilerDaemon", socketPath)
+        val pb = ProcessBuilder(
+            javaBin,
+            "--enable-native-access=ALL-UNNAMED",
+            "-cp", classpath,
+            "io.contained.ProfilerDaemon",
+            socketPath
+        )
         val daemonProcess = pb.start()
         val daemonPid = daemonProcess.pid()
 
@@ -60,26 +74,15 @@ object Profiler {
         // PR_SET_PTRACER = 0x59616d61
         LinuxNative.prctl(0x59616d61, daemonPid, 0, 0, 0)
 
-        // Read daemon output and print it to System.out, while also keeping it in recentLogs
-        Thread {
-            daemonProcess.inputStream.bufferedReader().useLines { lines ->
-                lines.forEach { line ->
-                    println(line)
-                    System.out.flush()
-                    recentLogs.add(line)
-                }
-            }
-        }.apply { isDaemon = true }.start()
-
-        // Also stream daemon errorStream to System.err
+        // Stream daemon errorStream to System.err
         Thread {
             daemonProcess.errorStream.bufferedReader().useLines { lines ->
                 lines.forEach { line ->
-                    System.err.println(line)
+                    System.err.println("[DAEMON ERR] $line")
                     System.err.flush()
                 }
             }
-        }.apply { isDaemon = true }.start()
+        }.apply { isDaemon = true; name = "profiler-daemon-stderr" }.start()
 
         // Ensure daemon process is cleaned up on JVM exit
         Runtime.getRuntime().addShutdownHook(Thread {
@@ -93,12 +96,9 @@ object Profiler {
         Arena.ofConfined().use { arena ->
             val addr = arena.allocate(LinuxNative.SOCKADDR_UN_LAYOUT)
             addr.fill(0)
-            addr.set(ValueLayout.JAVA_SHORT, 0, 1.toShort()) // AF_UNIX = 1
-            
+            addr.set(ValueLayout.JAVA_SHORT, 0L, 1.toShort()) // AF_UNIX = 1
+
             val pathBytes = socketPath.toByteArray(Charsets.UTF_8)
-            if (pathBytes.size >= 108) {
-                throw IllegalArgumentException("Unix socket path too long: $socketPath")
-            }
             val pathSeg = addr.asSlice(2, 108)
             for (i in pathBytes.indices) {
                 pathSeg.set(ValueLayout.JAVA_BYTE, i.toLong(), pathBytes[i])
@@ -117,9 +117,7 @@ object Profiler {
                 }
                 lastErrno = connRes.errno
                 LinuxNative.close(fd)
-                
-                // If daemon exited, stop retrying
-                // Wait a bit
+
                 Thread.sleep(delayMs)
             }
             throw IllegalStateException("Failed to connect to daemon socket at $socketPath after $maxRetries retries. Last errno=$lastErrno")
@@ -132,22 +130,22 @@ object Profiler {
             dummyByte.set(ValueLayout.JAVA_BYTE, 0, 0.toByte())
 
             val iov = arena.allocate(LinuxNative.IOVEC_LAYOUT)
-            iov.set(ValueLayout.ADDRESS, LinuxNative.IOVEC_LAYOUT.byteOffset(MemoryLayout.PathElement.groupElement("iov_base")), dummyByte)
-            iov.set(ValueLayout.JAVA_LONG, LinuxNative.IOVEC_LAYOUT.byteOffset(MemoryLayout.PathElement.groupElement("iov_len")), 1L)
+            iov.set(ValueLayout.ADDRESS, 0L, dummyByte)
+            iov.set(ValueLayout.JAVA_LONG, 8L, 1L)
 
             val controlBuf = arena.allocate(24)
             controlBuf.fill(0)
-            controlBuf.set(ValueLayout.JAVA_LONG, 0, 20L) // cmsg_len
-            controlBuf.set(ValueLayout.JAVA_INT, 8, 1)    // cmsg_level (SOL_SOCKET = 1)
-            controlBuf.set(ValueLayout.JAVA_INT, 12, 1)   // cmsg_type (SCM_RIGHTS = 1)
-            controlBuf.set(ValueLayout.JAVA_INT, 16, fdToSend)
+            controlBuf.set(ValueLayout.JAVA_LONG, 0L, 20L) // cmsg_len
+            controlBuf.set(ValueLayout.JAVA_INT, 8L, 1)    // cmsg_level (SOL_SOCKET = 1)
+            controlBuf.set(ValueLayout.JAVA_INT, 12L, 1)   // cmsg_type (SCM_RIGHTS = 1)
+            controlBuf.set(ValueLayout.JAVA_INT, 16L, fdToSend)
 
             val msg = arena.allocate(LinuxNative.MSGHDR_LAYOUT)
             msg.fill(0)
-            msg.set(ValueLayout.ADDRESS, LinuxNative.MSGHDR_LAYOUT.byteOffset(MemoryLayout.PathElement.groupElement("msg_iov")), iov)
-            msg.set(ValueLayout.JAVA_LONG, LinuxNative.MSGHDR_LAYOUT.byteOffset(MemoryLayout.PathElement.groupElement("msg_iovlen")), 1L)
-            msg.set(ValueLayout.ADDRESS, LinuxNative.MSGHDR_LAYOUT.byteOffset(MemoryLayout.PathElement.groupElement("msg_control")), controlBuf)
-            msg.set(ValueLayout.JAVA_LONG, LinuxNative.MSGHDR_LAYOUT.byteOffset(MemoryLayout.PathElement.groupElement("msg_controllen")), 24L)
+            msg.set(ValueLayout.ADDRESS, 16L, iov)
+            msg.set(ValueLayout.JAVA_LONG, 24L, 1L)
+            msg.set(ValueLayout.ADDRESS, 32L, controlBuf)
+            msg.set(ValueLayout.JAVA_LONG, 40L, 24L)
 
             val res = LinuxNative.sendmsg(socketFd, msg, 0)
             return res.returnValue >= 0
@@ -160,7 +158,7 @@ object Profiler {
         private val socketPath: String,
         private val daemonProcess: Process
     ) : ExecutorService by delegate {
-        
+
         private val threadApplied = ThreadLocal.withInitial { false }
 
         override fun execute(command: Runnable) {
@@ -194,6 +192,13 @@ object Profiler {
             }
             if (!threadApplied.get()) {
                 installProfilingFilter()
+
+                // Landlock Audit is non-transparent (denies and logs).
+                // Only enable if explicitly requested for io_uring profiling.
+                if (System.getenv("JSECCOMP_PROFILER_AUDIT") == "true") {
+                    Landlock.applyProfilingRuleset()
+                }
+
                 threadApplied.set(true)
             }
         }
@@ -234,21 +239,123 @@ object Profiler {
                     if (!sent) {
                         throw IllegalStateException("Failed to send seccomp listener FD to daemon")
                     }
-                } finally {
+
+                    // Wait for ACK byte from daemon
+                    Arena.ofConfined().use { arena ->
+                        val ackBuf = arena.allocate(1)
+                        val res = LinuxNative.read(socketFd, ackBuf, 1)
+                        if (res.returnValue != 1L || ackBuf.get(ValueLayout.JAVA_BYTE, 0) != 0xAC.toByte()) {
+                            throw IllegalStateException("Daemon failed to ACK listener receipt")
+                        }
+                    }
+
+                    // Start listener thread for this socket to receive TraceEvents
+                    startTraceListener(socketFd)
+                } catch (e: Exception) {
                     LinuxNative.close(socketFd)
+                    throw e
+                } finally {
                     LinuxNative.close(listenerFd)
                 }
             }
         }
 
+        private fun startTraceListener(socketFd: Int) {
+            val inputStream = object : InputStream() {
+                override fun read(): Int {
+                    Arena.ofConfined().use { arena ->
+                        val b = arena.allocate(1)
+                        val res = LinuxNative.read(socketFd, b, 1)
+                        if (res.returnValue <= 0) return -1
+                        return b.get(ValueLayout.JAVA_BYTE, 0L).toInt() and 0xFF
+                    }
+                }
+
+                override fun read(b: ByteArray, off: Int, len: Int): Int {
+                    if (len == 0) return 0
+                    Arena.ofConfined().use { arena ->
+                        val buf = arena.allocate(len.toLong())
+                        val res = LinuxNative.read(socketFd, buf, len.toLong())
+                        if (res.returnValue <= 0) return -1
+                        val readLen = res.returnValue.toInt()
+                        for (i in 0 until readLen) {
+                            b[off + i] = buf.get(ValueLayout.JAVA_BYTE, i.toLong())
+                        }
+                        return readLen
+                    }
+                }
+
+                override fun close() {
+                    LinuxNative.close(socketFd)
+                }
+            }
+
+            Thread {
+                try {
+                    val dis = DataInputStream(inputStream)
+                    while (true) {
+                        val pid = dis.readInt()
+                        val syscallNameLen = dis.readInt()
+                        val syscallNameBytes = ByteArray(syscallNameLen)
+                        dis.readFully(syscallNameBytes)
+                        val syscallName = String(syscallNameBytes, Charsets.UTF_8)
+
+                        val argsCount = dis.readInt()
+                        val args = LongArray(argsCount)
+                        for (i in 0 until argsCount) {
+                            args[i] = dis.readLong()
+                        }
+
+                        val pathsCount = dis.readInt()
+                        val paths = mutableListOf<String>()
+                        for (i in 0 until pathsCount) {
+                            val pathLen = dis.readInt()
+                            val pathBytes = ByteArray(pathLen)
+                            dis.readFully(pathBytes)
+                            paths.add(String(pathBytes, Charsets.UTF_8))
+                        }
+
+                        val event = TraceEvent(pid, syscallName, args, paths)
+
+                        // Deduplicate synchronous events that trigger both Seccomp and Landlock Audit
+                        if (paths.isNotEmpty()) {
+                            val cacheKey = "$syscallName:${paths.sorted().joinToString(",")}"
+                            val now = System.currentTimeMillis()
+                            val lastSeen = pathCache.get(cacheKey) ?: 0L
+                            if (now - lastSeen < 500) {
+                                println("[PROFILER] Deduplicated duplicate event for $cacheKey")
+                                continue // Skip duplicate within 500ms window
+                            }
+                            pathCache[cacheKey] = now
+                        }
+
+                        recentLogs.add(event)
+                    }
+                } catch (e: Exception) {
+                    // socket closed or error
+                } finally {
+                    inputStream.close()
+                }
+            }.apply { isDaemon = true; name = "trace-listener-$socketFd" }.start()
+        }
+
         override fun shutdown() {
-            delegate.shutdown()
+            try {
+                // Graceful cleanup
+            } finally {
+                delegate.shutdown()
+                daemonProcess.destroy()
+                pathCache.clear()
+            }
         }
 
         override fun shutdownNow(): List<Runnable> {
             val tasks = delegate.shutdownNow()
-            daemonProcess.destroy()
+            daemonProcess.destroyForcibly()
+            pathCache.clear()
             return tasks
         }
     }
+
+    private fun Long.asMemorySegment(): MemorySegment = MemorySegment.ofAddress(this)
 }
